--- a/index.html
+++ b/index.html
@@ -2,46 +2,46 @@
 <html lang="es">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>GUIA DIGITAL CIUDADANA</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GUIA DIGITAL CIUDADANA</title>
 
-   <!-- Fuente moderna -->
-   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Fuente moderna -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-<style>
-   body {
+  <style>
+    body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(to bottom, #0186a1, #01a1c1);
-   }
+    }
 
-   /* 🔹 Menú horizontal 100% fijo en una línea */
-   nav {
+    /* Menú horizontal */
+    nav {
       background: #017f99;
       overflow-x: auto;
       white-space: nowrap;
       padding: 10px;
       -webkit-overflow-scrolling: touch;
-   }
+    }
 
-   nav ul {
+    nav ul {
       list-style: none;
       padding: 0;
       margin: 0;
       display: inline-flex;
       white-space: nowrap;
       align-items: center;
-   }
+    }
 
-   nav ul li {
+    nav ul li {
       display: inline-block;
       margin: 0 8px;
       position: relative;
       white-space: nowrap;
-   }
+    }
 
-   nav ul li a {
+    nav ul li a {
       padding: 15px 20px;
       display: inline-block;
       color: white;
@@ -49,14 +49,13 @@
       text-decoration: none;
       border-radius: 8px;
       transition: background 0.3s;
-   }
+    }
 
-   nav ul li a:hover {
+    nav ul li a:hover {
       background: #00c3de;
-   }
+    }
 
-   /* SUBMENÚ */
-   nav ul li ul {
+    nav ul li ul {
       display: none;
       position: absolute;
       top: 100%;
@@ -65,26 +64,21 @@
       border-radius: 8px;
       min-width: 180px;
       z-index: 10;
-   }
+    }
 
-   nav ul li:hover > ul {
+    nav ul li:hover > ul {
       display: block;
-   }
+    }
 
-   nav ul li ul li a {
-      padding: 10px 15px;
-   }
-
-   /* Imagen principal */
-   .principal {
+    /* Imagen principal */
+    .principal {
       width: 100%;
       max-height: 700px;
       object-fit: cover;
       display: block;
-   }
+    }
 
-   /* Botón Ayuntamiento */
-   .ayuntamiento {
+    .ayuntamiento {
       background: #005f73;
       color: white;
       font-weight: bold;
@@ -95,23 +89,24 @@
       margin-top: 15px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       transition: .3s;
-   }
+    }
 
-   .ayuntamiento:hover {
+    .ayuntamiento:hover {
       background: #00b4d8;
       transform: scale(1.05);
-   }
+    }
 
-   /* Extras (botones) */
-   .extras {
+    /* Extras (botones) */
+    .extras {
       margin-top: 30px;
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: space-between;
       gap: 15px;
-   }
+      padding: 0 20px;
+      box-sizing: border-box;
+    }
 
-   .boton {
+    .boton {
       background: #005f73;
       color: white;
       padding: 12px 20px;
@@ -120,164 +115,234 @@
       text-decoration: none;
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       transition: .3s;
-   }
+      display: inline-block;
+      text-align: center;
+    }
 
-   .boton:hover {
+    .boton:hover {
       background: #00b4d8;
       transform: scale(1.05);
-   }
-</style>
+    }
+
+    /* Overlay (oculto hasta abrir video) */
+    #video-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.85);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      padding: 20px;
+    }
+
+    #video-overlay .video-box {
+      width: 100%;
+      max-width: 900px;
+      position: relative;
+    }
+
+    #video-overlay video {
+      width: 100%;
+      height: auto;
+      border-radius: 12px;
+      display: block;
+    }
+
+    #video-overlay .close-btn {
+      position: absolute;
+      top: -12px;
+      right: -12px;
+      background: #ff5c5c;
+      color: #fff;
+      border: none;
+      padding: 10px 12px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 700;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+
+    /* Mobile: mantén menú deslizable y extras en columna si es muy pequeño */
+    @media (max-width: 520px) {
+      .extras {
+        flex-direction: column;
+        align-items: stretch;
+      }
+    }
+  </style>
 </head>
 
 <body>
-<center>
+  <nav>
+    <ul>
+      <!-- Logo que abre video5 (si lo quieres) -->
+      <li>
+        <a href="javascript:void(0)" onclick="reproducirLogo(event)">
+          <img src="logoss.png" width="110" height="110" style="border-radius:10px;" alt="Logo">
+        </a>
+      </li>
 
-   <!-- 🔹 MENÚ -->
-   <nav>
-      <ul>
+      <!-- Buscador -->
+      <li>
+        <form method="get" action="https://www.google.com/search" target="_blank" style="display:inline-flex;">
+          <input type="search" name="q" placeholder="Introducir búsqueda" required
+            style="padding:8px;border-radius:10px;border:none;outline:none;">
+          <input type="submit" value="Buscar"
+            style="border:none;background:#017f99;color:white;padding:8px 12px;border-radius:10px;margin-left:6px;">
+        </form>
+      </li>
 
-         <!-- LOGO CON VIDEO -->
-         <li>
-            <a href="#" onclick="reproducirVideo()">
-               <img src="logoss.png" width="130" height="130" style="border-radius: 10px;">
-            </a>
-         </li>
+      <li><a href="ciudadanoo.html">CIUDADANO</a></li>
 
-         <!-- BUSCADOR -->
-         <li>
-            <form method="get" action="https://www.google.com/search" target="_blank">
-               <input type="search" name="q" placeholder="Introducir búsqueda" required
-                  style="padding:8px;border:none;outline:none;border-radius:10px;">
-               <input type="submit" value="Buscar"
-                  style="border:none;background:#017f99;color:white;padding:8px 14px;border-radius:10px;">
-            </form>
-         </li>
+      <li>
+        <a href="TRAMITE.HTML">TRÁMITE</a>
+        <ul>
+          <li><a href="bvh.html">Administrativos</a></li>
+          <li><a href="gestionar.php">Gestionar Trámite</a></li>
+        </ul>
+      </li>
 
-         <!-- MENÚS -->
-         <li><a href="ciudadanoo.html">CIUDADANO</a></li>
+      <li><a href="SOLICITUD.HTML">SOLICITUD</a></li>
 
-         <li>
-            <a href="TRAMITE.HTML">TRÁMITE</a>
-            <ul>
-               <li><a href="bvh.html">Administrativos</a></li>
-               <li><a href="gestionar.php">Gestionar Trámite</a></li>
-            </ul>
-         </li>
+      <li>
+        <a href="PAGO.HTML">PAGO</a>
+        <ul>
+          <li><a href="serviciosyderechos.html">Servicios y Derechos</a></li>
+          <li><a href="http://201.144.206.190/">Pago Predial</a></li>
+          <li><a href="http://odapasvalledebravo.dyndns.org/Default.aspx">Pago Agua</a></li>
+        </ul>
+      </li>
 
-         <li><a href="SOLICITUD.HTML">SOLICITUD</a></li>
+      <li>
+        <a href="DOCUMENTO.HTML">DOCUMENTO</a>
+        <ul>
+          <li><a href="galeria2.html">Galería</a></li>
+        </ul>
+      </li>
 
-         <li>
-            <a href="PAGO.HTML">PAGO</a>
-            <ul>
-               <li><a href="serviciosyderechos.html">Servicios y Derechos</a></li>
-               <li><a href="http://201.144.206.190/">Pago Predial</a></li>
-               <li><a href="http://odapasvalledebravo.dyndns.org/Default.aspx">Pago Agua</a></li>
-               <li><a href="https://app.cfe.mx/Aplicaciones/CCFE/MiEspacio/login.aspx">Pago Luz</a></li>
-               <li><a href="https://telmex.com/pago_sin_login">Pago Teléfono</a></li>
-               <li><a href="https://sseguridad.edomex.gob.mx/infracciones-transito">Multas</a></li>
-               <li><a href="https://tenencia.edomex.gob.mx/">Tenencia/Refrendo</a></li>
-               <li><a href="https://www.gob.mx/sre/acciones-y-programas/opciones-para-realizar-el-pago-de-pasaporte">Pasaporte</a></li>
-               <li><a href="https://smovilidad.edomex.gob.mx/licencias_permisos">Licencia</a></li>
-            </ul>
-         </li>
+      <li>
+        <a href="visitantes.HTML">VISITANTES</a>
+        <ul>
+          <li><a href="index2.php">Registro</a></li>
+        </ul>
+      </li>
 
-         <li>
-            <a href="DOCUMENTO.HTML">DOCUMENTO</a>
-            <ul>
-               <li><a href="galeria2.html">Galería</a></li>
-            </ul>
-         </li>
+      <li><a href="menu8.HTML">OPCIONES DE PAGO Y UBICACIÓN</a></li>
+      <li><a href="informacion.html">INFORMACIÓN</a></li>
+    </ul>
+  </nav>
 
-         <li>
-            <a href="visitantes.HTML">VISITANTES</a>
-            <ul>
-               <li><a href="index2.php">Registro</a></li>
-            </ul>
-         </li>
+  <!-- Imagen principal -->
+  <img src="111.jpg" alt="Imagen principal" class="principal">
 
-         <li>
-            <a href="menu8.HTML">OPCIONES DE PAGO Y UBICACIÓN</a>
-            <ul>
-               <li><a href="menu8.HTML">Ver Opciones</a></li>
-            </ul>
-         </li>
+  <center>
+    <p>
+      <a href="https://share.google/Q5YCviwYntzpR3B4T" class="ayuntamiento">PORTAL AYUNTAMIENTO VALLE DE BRAVO</a>
+    </p>
+  </center>
 
-         <li>
-            <a href="informacion.html">INFORMACIÓN</a>
-            <ul>
-               <li><a href="informacion.html">Más Información</a></li>
-            </ul>
-         </li>
+  <!-- Botones extras -->
+  <div class="extras">
+    <a href="javascript:void(0)" class="boton" id="btn-ver" onclick="abrirVideo(event, 'vide444.mp4')">🎥 Ver Video</a>
+    <a href="documento1.pdf" class="boton" download>📄 Descargar Documento</a>
+  </div>
 
-      </ul>
-   </nav>
+  <!-- OVERLAY (se muestra/oculta desde JS) -->
+  <div id="video-overlay" aria-hidden="true">
+    <div class="video-box">
+      <button class="close-btn" id="close-video">Cerrar ✖</button>
+      <video id="main-video" controls playsinline webkit-playsinline></video>
+    </div>
+  </div>
 
-   <!-- IMAGEN PRINCIPAL (113 ELIMINADA COMO PEDISTE) -->
-   <img src="111.jpg" class="principal">
+  <script>
+    // función reusable para abrir el overlay con el video indicado
+    function abrirVideo(e, archivo) {
+      if (e) e.preventDefault();
+      const overlay = document.getElementById('video-overlay');
+      const videoEl = document.getElementById('main-video');
 
-   <!-- AYUNTAMIENTO -->
-   <p>
-      <a href="https://share.google/Q5YCviwYntzpR3B4T" class="ayuntamiento">
-         PORTAL AYUNTAMIENTO VALLE DE BRAVO
-      </a>
-   </p>
+      // Si ya hay otro src, pausarlo y limpiarlo primero (seguridad)
+      if (!overlay || !videoEl) return;
 
-   <!-- EXTRAS -->
-   <div class="extras">
-      <a href="#" class="boton" onclick="mostrarVideo()">🎥 Ver Video</a>
-      <a href="documento1.pdf" class="boton" download>📄 Descargar Documento</a>
-   </div>
+      // Setear src correcto (asegúrate que el archivo exista en tu servidor)
+      videoEl.src = archivo;
+      videoEl.currentTime = 0;
 
-</center>
+      // Mostrar overlay y reproducir
+      overlay.style.display = 'flex';
+      overlay.setAttribute('aria-hidden', 'false');
 
-<!-- 🔹 SISTEMA DE VIDEO SIN BORRAR LA PÁGINA -->
-<script>
-function mostrarVideo() {
-   crearReproductor("vide444.mp4");
-}
+      // Intenta reproducir (algunos móviles requieren interacción del usuario)
+      videoEl.play().catch(function(err){
+        // si autoplay es bloqueado, el video quedará listo y el usuario puede darle play
+        console.log('Autoplay bloqueado o pendiente: ', err);
+      });
 
-function reproducirVideo() {
-   crearReproductor("video5.mp4");
-}
+      // En caso de que el usuario presione fuera del video (clic en overlay), cerramos también
+      overlay.addEventListener('click', overlayClickClose);
+      // También escap (ESC) para cerrar
+      document.addEventListener('keydown', escKeyClose);
+    }
 
-function crearReproductor(srcVideo) {
-   const overlay = document.createElement("div");
-   overlay.style.position = "fixed";
-   overlay.style.top = "0";
-   overlay.style.left = "0";
-   overlay.style.width = "100%";
-   overlay.style.height = "100%";
-   overlay.style.background = "rgba(0,0,0,0.8)";
-   overlay.style.display = "flex";
-   overlay.style.justifyContent = "center";
-   overlay.style.alignItems = "center";
-   overlay.style.zIndex = "9999";
+    function overlayClickClose(ev) {
+      // si el click fue en el overlay (no en la caja interna), cerrar
+      const box = document.querySelector('#video-overlay .video-box');
+      if (!box) return;
+      if (!box.contains(ev.target)) {
+        cerrarVideo();
+      }
+    }
 
-   const video = document.createElement("video");
-   video.src = srcVideo;
-   video.controls = true;
-   video.autoplay = true;
-   video.style.width = "80%";
-   video.style.borderRadius = "15px";
+    function escKeyClose(ev) {
+      if (ev.key === 'Escape') cerrarVideo();
+    }
 
-   const cerrar = document.createElement("button");
-   cerrar.innerHTML = "✖ Cerrar";
-   cerrar.style.position = "absolute";
-   cerrar.style.top = "20px";
-   cerrar.style.right = "20px";
-   cerrar.style.padding = "10px 20px";
-   cerrar.style.fontSize = "16px";
-   cerrar.style.border = "none";
-   cerrar.style.borderRadius = "8px";
-   cerrar.style.cursor = "pointer";
+    // cerrarVideo: pausa, limpia src y oculta overlay de forma segura
+    function cerrarVideo() {
+      const overlay = document.getElementById('video-overlay');
+      const videoEl = document.getElementById('main-video');
+      if (!overlay || !videoEl) return;
 
-   cerrar.onclick = () => document.body.removeChild(overlay);
+      // Quitar listeners añadidos
+      overlay.removeEventListener('click', overlayClickClose);
+      document.removeEventListener('keydown', escKeyClose);
 
-   overlay.appendChild(video);
-   overlay.appendChild(cerrar);
-   document.body.appendChild(overlay);
-}
-</script>
+      // Pausar y limpiar el video
+      try {
+        videoEl.pause();
+        // limpiar source para liberar memoria y evitar reproducción en background
+        videoEl.removeAttribute('src');
+        videoEl.load();
+      } catch (e) {
+        console.warn('Error limpiando video:', e);
+      }
 
+      // Ocultar overlay (no toques el body)
+      overlay.style.display = 'none';
+      overlay.setAttribute('aria-hidden', 'true');
+    }
+
+    // botón cerrar dentro del overlay
+    document.getElementById('close-video').addEventListener('click', function (e) {
+      e.preventDefault();
+      cerrarVideo();
+    });
+
+    // función usada por el logo si quieres reproducir video5.mp4
+    function reproducirLogo(e) {
+      if (e) e.preventDefault();
+      abrirVideo(null, 'video5.mp4');
+    }
+
+    // seguridad: evitar que enlaces con href="#" causen salto de página si quedan
+    document.addEventListener('click', function (e) {
+      const a = e.target.closest && e.target.closest('a[href="#"]');
+      if (a) {
+        e.preventDefault();
+      }
+    });
+  </script>
 </body>
 </html>
