--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
          max-height: 700px;
          object-fit: cover;
          display: block;
-         background-color: #017f99;
       }
 
       .ayuntamiento {
@@ -101,13 +100,13 @@
          transform: scale(1.05);
       }
 
-      /* 🔹 Barra donde los botones quedan uno a cada lado */
-      .barra-extras {
+      /* BOTONES */
+      .extras {
          margin-top: 30px;
-         width: 90%;
          display: flex;
          justify-content: space-between;
-         align-items: center;
+         width: 90%;
+         max-width: 900px;
       }
 
       .boton {
@@ -126,49 +125,46 @@
          transform: scale(1.05);
       }
 
-      /* 🔹 Overlay del video */
-      .overlay {
+      /* OVERLAY VIDEO */
+      #overlay {
+         display: none;
          position: fixed;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          background: rgba(0, 0, 0, 0.8);
-         display: none;
-         justify-content: center;
+         display: flex;
          align-items: center;
-         z-index: 9999;
+         justify-content: center;
+         z-index: 1000;
       }
 
-      .video-container {
+      #overlay video {
          width: 80%;
-         max-width: 800px;
-         position: relative;
+         max-width: 700px;
+         border-radius: 15px;
       }
 
-      .cerrar {
+      #cerrarVideo {
          position: absolute;
-         top: -10px;
-         right: -10px;
-         background: red;
-         border: none;
+         top: 20px;
+         right: 20px;
+         font-size: 30px;
          color: white;
-         font-size: 20px;
-         border-radius: 50%;
          cursor: pointer;
-         width: 35px;
-         height: 35px;
+         font-weight: bold;
       }
    </style>
 </head>
 
 <body>
-   <center>
 
+   <center>
       <nav>
          <ul>
             <li>
-               <a href="#" onclick="reproducirVideo()">
+               <a href="#" onclick="mostrarVideo('video5.mp4')">
                   <img src="logoss.png" width="130" height="130" alt="Logo CECYTEM" style="border-radius: 10px;">
                </a>
             </li>
@@ -235,11 +231,6 @@
                </ul>
             </li>
 
-            <li>
-               <a href="index3.php">
-                  <img src="defis.png" alt="Ir al formulario" width="130" height="130" style="cursor:pointer; border-radius: 10px;">
-               </a>
-            </li>
          </ul>
       </nav>
 
@@ -247,49 +238,35 @@
       <img src="113.jpg" alt="Imagen principal" class="principal">
 
       <p>
-         <a href="https://share.google/Q5YCviwYntzpR3B4T" class="ayuntamiento">PORTAL AYUNTAMIENTO VALLE DE BRAVO</a>
+         <a href="https://share.google/Q5YCviwYntzpR3B4T" class="ayuntamiento">
+            PORTAL AYUNTAMIENTO VALLE DE BRAVO
+         </a>
       </p>
 
-      <!-- 🔹 Botones en esquinas opuestas -->
-      <div class="barra-extras">
-         <a href="#" class="boton" onclick="mostrarVideo()">🎥 Ver Video</a>
+      <!-- BOTONES A LOS LADOS -->
+      <div class="extras">
+         <a href="#" class="boton" onclick="mostrarVideo('vide44.mp4')">🎥 Ver Video</a>
          <a href="documento1.pdf" class="boton" download>📄 Descargar Documento</a>
       </div>
 
    </center>
 
-   <!-- 🔹 Overlay para reproducir videos -->
-   <div id="videoOverlay" class="overlay">
-      <div class="video-container">
-         <button class="cerrar" onclick="cerrarVideo()">✖</button>
-         <video id="videoPlayer" controls autoplay style="width:100%; border-radius:10px;"></video>
-      </div>
+   <!-- OVERLAY VIDEO -->
+   <div id="overlay">
+      <span id="cerrarVideo" onclick="cerrarVideo()">✖</span>
+      <video id="videoPlayer" controls autoplay></video>
    </div>
 
    <script>
-      function mostrarVideo() {
-         let overlay = document.getElementById("videoOverlay");
-         let player = document.getElementById("videoPlayer");
-
-         player.src = "vide44.mp4";
-         overlay.style.display = "flex";
-      }
-
-      function reproducirVideo() {
-         let overlay = document.getElementById("videoOverlay");
-         let player = document.getElementById("videoPlayer");
-
-         player.src = "video5.mp4";
-         overlay.style.display = "flex";
+      function mostrarVideo(archivo) {
+         document.getElementById("overlay").style.display = "flex";
+         document.getElementById("videoPlayer").src = archivo;
       }
 
       function cerrarVideo() {
-         let overlay = document.getElementById("videoOverlay");
-         let player = document.getElementById("videoPlayer");
-
-         player.pause();
-         player.src = "";
-         overlay.style.display = "none";
+         document.getElementById("overlay").style.display = "none";
+         document.getElementById("videoPlayer").pause();
+         document.getElementById("videoPlayer").src = "";
       }
    </script>
 
