--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <script src="maestra.js"></script>
    <title>GUIA DIGITAL CIUDADANA</title>
+
+   <!-- Fuente moderna -->
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
    <style>
       body {
          margin: 0;
-         font-family: Arial, sans-serif;
+         font-family: 'Poppins', sans-serif;
          background: linear-gradient(to bottom, #0186a1, #01a1c1);
       }
 
@@ -17,147 +21,276 @@
          background: #017f99;
          display: flex;
          justify-content: center;
+         align-items: center;
          flex-wrap: wrap;
          padding: 10px;
       }
 
       nav ul {
-         display: flex;
          list-style: none;
+         margin: 0;
          padding: 0;
+         display: flex;
          flex-wrap: wrap;
+         justify-content: center;
+         align-items: center;
       }
 
       nav ul li {
-         margin: 0 8px;
          position: relative;
+         margin: 0 8px;
       }
 
       nav ul li a {
+         display: block;
+         padding: 15px 20px;
          color: white;
          text-decoration: none;
-         padding: 12px 18px;
-         display: block;
-         font-weight: bold;
+         font-weight: 600;
+         border-radius: 8px;
+         transition: background 0.3s;
       }
 
       nav ul li a:hover {
          background: #00c3de;
-         border-radius: 8px;
       }
 
-      /* Imagen principal */
+      nav ul li ul {
+         display: none;
+         position: absolute;
+         top: 100%;
+         left: 0;
+         background: #00677e;
+         border-radius: 8px;
+         min-width: 180px;
+         z-index: 100;
+      }
+
+      nav ul li ul li a {
+         padding: 10px 15px;
+         color: white;
+      }
+
+      nav ul li:hover>ul {
+         display: block;
+      }
+
       .principal {
          width: 100%;
          max-height: 700px;
          object-fit: cover;
          display: block;
+         background-color: #017f99;
+      }
+
+      .ayuntamiento {
+         background: #005f73;
+         color: white;
+         font-weight: bold;
+         display: inline-block;
+         padding: 12px 20px;
+         border-radius: 10px;
+         margin-top: 15px;
+         text-decoration: none;
+         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+         transition: background 0.3s, transform 0.3s;
+      }
+
+      .ayuntamiento:hover {
+         background: #00b4d8;
+         transform: scale(1.05);
+      }
+
+      /* 🔹 Barra donde los botones quedan uno a cada lado */
+      .barra-extras {
+         margin-top: 30px;
+         width: 90%;
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
       }
 
       .boton {
          background: #005f73;
          color: white;
-         padding: 12px 18px;
-         text-decoration: none;
+         padding: 12px 20px;
          border-radius: 8px;
+         text-decoration: none;
          font-weight: bold;
-         margin: 20px;
-         display: inline-block;
+         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+         transition: background 0.3s, transform 0.3s;
       }
 
       .boton:hover {
          background: #00b4d8;
+         transform: scale(1.05);
       }
 
-      /* OVERLAY VIDEO */
-      #overlay {
-         display: none;
+      /* 🔹 Overlay del video */
+      .overlay {
          position: fixed;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
-         background: rgba(0,0,0,0.85);
+         background: rgba(0, 0, 0, 0.8);
+         display: none;
          justify-content: center;
          align-items: center;
          z-index: 9999;
       }
 
-      #overlay video {
-         width: 85%;
-         max-width: 700px;
-         border-radius: 10px;
+      .video-container {
+         width: 80%;
+         max-width: 800px;
+         position: relative;
       }
 
-      #cerrarVideo {
+      .cerrar {
          position: absolute;
-         top: 20px;
-         right: 20px;
+         top: -10px;
+         right: -10px;
+         background: red;
+         border: none;
          color: white;
-         font-size: 35px;
+         font-size: 20px;
+         border-radius: 50%;
          cursor: pointer;
-         font-weight: bold;
+         width: 35px;
+         height: 35px;
       }
    </style>
 </head>
 
 <body>
-
    <center>
+
       <nav>
          <ul>
-            <li><a href="ciudadanoo.html">CIUDADANO</a></li>
-            <li><a href="TRAMITE.HTML">TRÁMITE</a></li>
-            <li><a href="SOLICITUD.HTML">SOLICITUD</a></li>
-            <li><a href="PAGO.HTML">PAGO</a></li>
-            <li><a href="DOCUMENTO.HTML">DOCUMENTO</a></li>
-            <li><a href="visitantes.HTML">VISITANTES</a></li>
-            <li><a href="menu8.HTML">PAGO Y UBICACIÓN</a></li>
-            <li><a href="informacion.html">INFORMACIÓN</a></li>
+            <li>
+               <a href="#" onclick="reproducirVideo()">
+                  <img src="logoss.png" width="130" height="130" alt="Logo CECYTEM" style="border-radius: 10px;">
+               </a>
+            </li>
+
+            <li>
+               <form method="get" action="https://www.google.com/search" target="_blank">
+                  <input type="search" name="q" placeholder="Introducir búsqueda" autofocus required>
+                  <input type="submit" value="Buscar">
+               </form>
+            </li>
+
+            <li><p><a href="ciudadanoo.html">CIUDADANO</a></p></li>
+
+            <li>
+               <p><a href="TRAMITE.HTML">TRÁMITE</a></p>
+               <ul>
+                  <li><a href="bvh.html">Administrativos</a></li>
+                  <li><a href="gestionar.php">Gestionar Trámite</a></li>
+               </ul>
+            </li>
+
+            <li><p><a href="SOLICITUD.HTML">SOLICITUD</a></p></li>
+
+            <li>
+               <p><a href="PAGO.HTML">PAGO</a></p>
+               <ul>
+                  <li><a href="serviciosyderechos.html">Servicios y Derechos</a></li>
+                  <li><a href="http://201.144.206.190/">Pago de Predial</a></li>
+                  <li><a href="http://odapasvalledebravo.dyndns.org/Default.aspx">Pago de Agua</a></li>
+                  <li><a href="https://app.cfe.mx/Aplicaciones/CCFE/MiEspacio/login.aspx">Pago de Luz</a></li>
+                  <li><a href="https://telmex.com/pago_sin_login">Pago Teléfono/Internet</a></li>
+                  <li><a href="https://sseguridad.edomex.gob.mx/infracciones-transito">Multas de Tránsito</a></li>
+                  <li><a href="https://tenencia.edomex.gob.mx/">Tenencia/Refrendo Vehicular</a></li>
+                  <li><a href="https://www.gob.mx/sre/acciones-y-programas/opciones-para-realizar-el-pago-de-pasaporte">Pago de Pasaporte</a></li>
+                  <li><a href="https://smovilidad.edomex.gob.mx/licencias_permisos">Licencia de Conducir</a></li>
+               </ul>
+            </li>
+
+            <li>
+               <p><a href="DOCUMENTO.HTML">DOCUMENTO</a></p>
+               <ul>
+                  <li><a href="galeria2.html">Galería</a></li>
+               </ul>
+            </li>
+
+            <li>
+               <p><a href="visitantes.HTML">VISITANTES</a></p>
+               <ul>
+                  <li><a href="index2.php">Registro</a></li>
+               </ul>
+            </li>
+
+            <li>
+               <p><a href="menu8.HTML">OPCIONES DE PAGO Y UBICACIÓN</a></p>
+               <ul>
+                  <li><a href="menu8.HTML">Ver Opciones</a></li>
+               </ul>
+            </li>
+
+            <li>
+               <p><a href="informacion.html">INFORMACIÓN</a></p>
+               <ul>
+                  <li><a href="informacion.html">Más Información</a></li>
+               </ul>
+            </li>
+
+            <li>
+               <a href="index3.php">
+                  <img src="defis.png" alt="Ir al formulario" width="130" height="130" style="cursor:pointer; border-radius: 10px;">
+               </a>
+            </li>
          </ul>
       </nav>
 
-      <!-- IMAGEN PRINCIPAL -->
-      <img src="113.jpg" class="principal">
+      <!-- Imagen principal -->
+      <img src="113.jpg" alt="Imagen principal" class="principal">
 
-      <!-- BOTÓN PARA VER VIDEO -->
-      <a href="#" class="boton" onclick="mostrarVideo('vide444.mp4')">🎥 Ver Video</a>
+      <p>
+         <a href="https://share.google/Q5YCviwYntzpR3B4T" class="ayuntamiento">PORTAL AYUNTAMIENTO VALLE DE BRAVO</a>
+      </p>
+
+      <!-- 🔹 Botones en esquinas opuestas -->
+      <div class="barra-extras">
+         <a href="#" class="boton" onclick="mostrarVideo()">🎥 Ver Video</a>
+         <a href="documento1.pdf" class="boton" download>📄 Descargar Documento</a>
+      </div>
+
    </center>
 
-   <!-- OVERLAY VIDEO -->
-   <div id="overlay">
-      <span id="cerrarVideo" onclick="cerrarVideo()">✖</span>
-      <video id="videoPlayer" controls></video>
+   <!-- 🔹 Overlay para reproducir videos -->
+   <div id="videoOverlay" class="overlay">
+      <div class="video-container">
+         <button class="cerrar" onclick="cerrarVideo()">✖</button>
+         <video id="videoPlayer" controls autoplay style="width:100%; border-radius:10px;"></video>
+      </div>
    </div>
 
    <script>
-      function mostrarVideo(archivo) {
-         let overlay = document.getElementById("overlay");
-         let video = document.getElementById("videoPlayer");
+      function mostrarVideo() {
+         let overlay = document.getElementById("videoOverlay");
+         let player = document.getElementById("videoPlayer");
 
+         player.src = "vide44.mp4";
          overlay.style.display = "flex";
-         video.src = archivo;
+      }
 
-         video.play();
+      function reproducirVideo() {
+         let overlay = document.getElementById("videoOverlay");
+         let player = document.getElementById("videoPlayer");
 
-         // Evita que el botón atrás cierre la página
-         history.pushState(null, null, location.href);
+         player.src = "video5.mp4";
+         overlay.style.display = "flex";
       }
 
       function cerrarVideo() {
-         let overlay = document.getElementById("overlay");
-         let video = document.getElementById("videoPlayer");
+         let overlay = document.getElementById("videoOverlay");
+         let player = document.getElementById("videoPlayer");
 
-         video.pause();
-         video.src = "";
+         player.pause();
+         player.src = "";
          overlay.style.display = "none";
       }
-
-      // Evita salir de la página con botón atrás mientras el video está abierto
-      window.onpopstate = function () {
-         cerrarVideo();
-         history.pushState(null, null, location.href);
-      };
    </script>
 
 </body>
